--- a/aug15.html
+++ b/aug15.html
@@ -21,13 +21,13 @@
         <div class="collapse navbar-collapse" id="navbarnavbarNav">
           <ul class="navbar-nav mx-auto">
             <li class="nav-item">
-              <a class="nav-link Active" aria-current="page" href="hero">Home</a></li>
+              <a class="nav-link Active" aria-current="page" href="#hero">Home</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="#About Me">About Me</a></li>
+              <a class="nav-link" href="#About">About</a></li>
             <li class="nav-item">
               <a class="nav-link" href="#Services">Services</a></li>
           </ul>
-          <a class="btn btn-outline-dark" href="#Contact Us">Let's Talk</a>
+          <a class="btn btn-outline-dark" href="#ContactUs">Let's Talk</a>
         </div>
       </div>
     </nav>
@@ -167,10 +167,10 @@
 
     <section class="contact" id="contact">
       <div class="container">
-        <h2 class="display-5 fw-bold mb-4">Contact Us</h2>
+        <h2 class="display-5 fw-bold mb-4">Contact Me</h2>
         <div class="row">
           <div class="col-sm-4 mt-4">
-            <a href="#">finedining@123.com</a>
+            <a href="#">workwithxyr@gmail.com</a>
           </div>
           <div class="col-sm-4 mt-4">
             <div class="social-media">
@@ -179,12 +179,14 @@
               <a href="#"><i class="bi bi-facebook"></i></a>
             </div>
           </div>
-          <div class="col-sm 4mt-4">
-            <a href="#">+1234567890</a>
+          <div class="col-sm 4mt-4"><br>
+            <a href="#">+639197964191</a>
           </div>
         </div>
       </div>
     </section>
+
+    <footer class="text-center p-3 bg-body-tertiary"></footer>
 
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
          integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" 
